Remove non static inners where possible, and remove the access$ methods where possible